2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* __init__.py: Remove enum definitions.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: Make more robust for user errors.
        * cavity.cpp: Ditto.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add global.mode_surplus.
        * defs.cpp: Ditto.

2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Update to Boost release version.

2002-11-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add series solver option.
	* camfr_wrap.cpp: Ditto.
	* __init__.py: Ditto.
	
2002-09-12  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* waveguide.cpp: Recalc if global.N changes.
	* scatterer.cpp: Ditto.

2002-09-12  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Add abs_S.

2002-08-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* __init__.py: Import camfr_tk by default.

2002-08-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Fix memory management issues.

2002-07-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.cpp: Fix forward detection.

2002-07-19  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Upgrade to new Boost version.

2002-07-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Make Scatterer and Stack implicitly convertible 
	  to Term.
	* expression.cpp : Ditto.

2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Fix field in exit medium.

2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Call calc_interface_fields earlier.

2002-07-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Add Poynting vector to Field.
	* camfr_wrap.cpp: ditto.

2002-07-15  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Major change in the way PML is defined.
	* geometry.py: Ditto.
	* waveguide.h: Ditto.

2002-07-15  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
