@@ -1,3 +1,7 @@
+2002-11-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* S_scheme_fields.cpp: Improve detection of Diag and Mono.
+
 2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* __init__.py: Remove enum definitions.
